<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPrefer">


    <TextView
        android:id="@+id/tv_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/tv_form_login"
        android:textSize="44sp"
        android:fontFamily="monospace"/>


    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_logo_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        android:hint="@string/app_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_user_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="8dp"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/et_username"
        android:drawableLeft="@drawable/ic_user24"
        android:textColor="@color/black"
        android:background="@drawable/et_login"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_user_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="8dp"
        android:maxLines="1"
        android:lines="1"
        android:drawableLeft="@drawable/ic_pass24"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/et_password"
        android:background="@drawable/et_login"/>

    <CheckBox
        android:id="@+id/cb_save_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:ellipsize="middle"
        android:text="@string/cb_save_pass"/>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cb_save_pass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="12dp"
        android:background="@drawable/bt_design_login"
        android:text="@string/login"/>
</androidx.constraintlayout.widget.ConstraintLayout>